# WorldMachine

./: .dockerignore  .gitignore  CITATION.cff  README.md  build_docker.sh  dockerfile  pyproject.toml
.github/workflows/: page.yml  python-publish.yml
benchmark/: bench_inference.py
benchmark/utils/: __init__.py  data.py  metrics.py  model.py  trainer.py
ci_cd/: donodo_template.json
dev/: .gitignore  Blocks.ipynb  DTW.ipynb  LongTrain.ipynb  Mask.ipynb  Memory.ipynb  OptimalSequence.ipynb  PlotsQualificacao.ipynb  SensorialTrain.ipynb  StateDiscover.ipynb  Toy1D_Exp2.ipynb  Toy1d.ipynb  Toy1dData2.ipynb  Toy1d_Metrics2.ipynb  aa.dot  check_conversion.ipynb  cos.ipynb  cosin_test.py  hamilton_parameterize.ipynb  local_test.py  profile_optimize.ipynb  test_metrics.py  toy1d_autoregressive.py  toy1d_autoregressive_mask_sensorial.py  toy1d_block_configuration.py  toy1d_discover_state.py  toy1d_long_training.py  toy1d_mask_sensorial.py  toy1d_memory.py  toy1d_post_train.ipynb  toy1d_simple_shift.py  zip_test.ipynb
dev/RESULTS/: GeneratePlots.ipynb
dev/structural_break/: Data.ipynb  model_test.ipynb
dev/toy1d_experiments/: configuration_test_linear_model.ipynb  configutation_test.ipynb  configutation_test_stats.ipynb  protocol_test.ipynb
examples/: My First World Machine.ipynb
experiments/: README.md  pyproject.toml
experiments/notebooks/: Toy1D - Experiment0 - Protocol Test.ipynb  Toy1D - Experiment0 - Protocol Test.md
experiments/reports/: Toy1D - Experiment0 - Protocol Test.md  World Machine - Toy1D - Experiment 0 Protocol Test.md  (+3 more)
page/: pyproject.toml
(+99 files in other folders)
